# Tilemancer

./: .gitignore  CMakeLists.txt  README.md
tilemancer/: CMakeLists.txt  bezier.cc  bezier.h  bpoint.cc  bpoint.h  browser.cc  browser.h  browserfile.cc  browserfile.h  color.cc  color.h  cpoint.cc  cpoint.h  drag.cc  drag.h  effect.cc  effect.h  file.cc  file.h  files_to_functions.py  floatimage.cc  floatimage.h  gl.h  globals.cc  globals.h  graphics_globals.cc  graphics_globals.h  image.cc  image.h  load_texture.cc  load_texture.h  main.cc  math.cc  math.h  os.cc  os.h  os_linux.cc  os_linux.h  os_list.h  os_osx.cc  (+26 more)
tilemancer/shaders/linux/: blur.frag  blur.vert  light.frag  my.frag  my.vert  transition.frag  transition.vert
